--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
   text-align: center;
+  font-size: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  width: 150px;
+  height: 100px;
+  margin: 0 15px;
+  border-radius: 25px;
+  background-color: lightblue;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  box-shadow: 10px 5px 5px black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button:hover {
+  transition: all 0.5 ease-in-out;
+  background-color: lightcoral;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mainBtn {
+  margin-top: 200px;
+}
+
+.selectorsBtn {
+  margin-top: 50px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
 }
